--- a/public/projects.yaml
+++ b/public/projects.yaml
@@ -4,6 +4,6 @@
 - title: CentML Status Page
   url: https://centmlllmstatuspage.vendor-accounts.workers.dev
   screenshot: /placeholder-centml.png
-  - title: Turn Menus Into Mahic
+- title: Turn Menus Into Magic
   url: https://www.menugen.app/
   screenshot: /placeholder-menugen.png
