--- a/public/projects.yaml
+++ b/public/projects.yaml
@@ -7,3 +7,6 @@
 - title: Turn Menus Into Magic
   url: https://www.menugen.app/
   screenshot: /placeholder-menugen.png
+- title: Turn Menus Into Magic
+  url: https://www.isthisqrsafe.com/
+  screenshot: /is_qr.png
